# playground-api

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: pipeline.yml
dev/architecture/: Architecture.md
dev/cdk/: .eslintrc  .prettierrc  index.ts  package-lock.json  package.json  tsconfig.json
dev/cdk/lib/config/: environments.ts
dev/cdk/lib/constructs/: dymamo_db_construct.ts  lambda_construct.ts
dev/cdk/lib/stacks/: playground_api_stack.ts
src/: lib.rs  main.rs
src/config/: api_docs.rs  mod.rs
src/controller/: account_controller.rs  mod.rs
src/error/: mod.rs
src/model/: account.rs  mod.rs
src/repository/: account_repository.rs  dynamo_client.rs  mod.rs
src/service/: account_service.rs  mod.rs
tests/: accounts_integration_test.rs
tests/agent/: mod.rs  playground_api_lambda_agent.rs
